--- a/_posts/2020-10-31-emstrack.md
+++ b/_posts/2020-10-31-emstrack.md
@@ -2,7 +2,7 @@
 title: EMSTrack Cruz Roja
 author: sungwook
 date: 2020-10-31 00:00:00 +0800
-categories: [Project]
+categories: [Project, UCSD]
 tags: [Python, Server, WebRTC, Django]
 math: true
 mermaid: true
