--- a/_posts/2020-10-31-emstrack.md
+++ b/_posts/2020-10-31-emstrack.md
@@ -2,7 +2,7 @@
 title: EMSTrack Cruz Roja
 author: sungwook
 date: 2020-10-31 00:00:00 +0800
-categories: [Project, UCSD]
+categories: [Project, UC San Diego]
 tags: [Python, Server, WebRTC, Django]
 math: true
 mermaid: true
@@ -15,4 +15,7 @@ image:
 ## Motivation
 
 Our mission is to partner with health organizations to help residents of underserved communities worldwide make better use of their resources in emergency medical situations by providing them with an enhanced infrastructure that can track, dispatch, and visualize resources in real time on a map.
-## 
+
+## Highlight
+
+https://today.ucsd.edu/story/lifesaving-app
